more logic and refactorings
