# backend/src/routes/BankRoutes.ts
@@ -1,20 +1,16 @@
 import { Router } from 'express';
-import { BankController } from '../../controllers/BankController';
+import { BankController } from '../controllers/BankController';
 
 export const BankRoutes = Router();
 const controller = new BankController();
 
 //URL: ./bank/
-BankRoutes.get('/auth', async (req, res) => {
-  let response = await controller.auth();
-  res.json(response);
-});
+
 BankRoutes.get('/:userId/accounts', async (req, res) => {
   try {
     let response = await controller.getAccounts(req.params.userId);
     res.json(response);
   } catch (error: any) {
-    console.error(error.message);
     res.status(500).send(error.message);
   }
 });
@@ -26,7 +22,6 @@ BankRoutes.get('/:userId/account/:accountId', async (req, res) => {
     );
     res.json(response);
   } catch (error: any) {
-    console.error(error.message);
     res.status(500).send(error.message);
   }
 });
@@ -38,7 +33,6 @@ BankRoutes.get('/:userId/account/:accountId/transactions', async (req, res) => {
     );
     res.json(response);
   } catch (error: any) {
-    console.error(error.message);
     res.status(500).send(error.message);
   }
 });
@@ -47,7 +41,16 @@ BankRoutes.get('/:userId/transactions', async (req, res) => {
     let response = await controller.getTransactions(req.params.userId);
     res.json(response);
   } catch (error: any) {
-    console.error(error.message);
+    res.status(500).send(error.message);
+  }
+});
+
+BankRoutes.post('/consent', async (req, res) => {
+  try {
+    console.log({ consent: req.body });
+    let response = await controller.getConsent(req.body.id);
+    res.redirect(response);
+  } catch (error: any) {
     res.status(500).send(error.message);
   }
 });
@@ -57,16 +60,14 @@ BankRoutes.post('/connect', async (req, res) => {
     let response = await controller.createConnection(req.body);
     res.json(response);
   } catch (error: any) {
-    console.error(error);
     res.status(500).send(error.message);
   }
 });
-BankRoutes.post('/createUser', async (req, res) => {
+BankRoutes.post('/createUser', async (req, res, next) => {
   try {
     let response = await controller.createUser(req.body);
     res.json(response);
   } catch (error: any) {
-    console.error(error);
-    res.status(500).send(error.message);
+    next(error);
   }
 });
